<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_item"
    android:layout_width="match_parent"
    android:background="@drawable/description_shape"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleItem"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/task_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:lineSpacingExtra="8sp"
        android:text="@string/nameTaskLable"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleItem"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView-->
        <!--android:id="@+id/tv_item_description"-->
        <!--android:layout_width="305dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="52dp"-->
        <!--android:background="@drawable/description_shape"-->
        <!--android:text="@string/none"-->
        <!--android:maxHeight="50dp"-->
        <!--android:textAlignment="center"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/circleItem" />-->

    <TextView
        android:id="@+id/tv_time_start"
        style="@style/TextStyleRecyclerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="@string/starts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tv_time_expires"
        style="@style/TextStyleRecyclerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="@string/ends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_start" />

    <TextView
        android:id="@+id/tvLableStart"
        style="@style/TextStyleRecyclerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="@string/startsTime"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    <TextView
        android:id="@+id/tvLableEnd"
        style="@style/TextStyleRecyclerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="@string/endsTime"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_expires"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLableStart" />

    <!--<TextView-->
        <!--android:id="@+id/tvDescLable"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/descriptionTaskLable"-->
        <!--style="@style/TextStyleRecyclerTime"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />-->
</android.support.constraint.ConstraintLayout>